# StrukturinisProgramavimas

AntrasPraktinisDarbas/: AntrasPraktinisDarbas.cpp  AntrasPraktinisDarbas.h  CMakeLists.txt
Aplication1/: Aplication1.sln
Aplication1/Aplication1/: Aplication1.cpp  Aplication1.vcxproj  Aplication1.vcxproj.filters
Aplication2/: Aplication2.sln
Aplication2/Aplication2/: Aplication2.cpp  Aplication2.vcxproj  Aplication2.vcxproj.filters
Aplication3/: Aplication3.sln
Aplication3/Aplication3/: Aplication3.cpp  Aplication3.vcxproj  Aplication3.vcxproj.filters
Application4/: Application4.cpp  Application4.sln  Application4.vcxproj
KetvirtaPraktinieUzduotis/: CMakeLists.txt  KetvirtaPraktinieUzduotis.cpp  KetvirtaPraktinieUzduotis.h
PirmaPraktineUzduotis/: PirmaPraktineUzduotis.sln  PirmaPraktineUzduotis.vcxproj  main.cpp
PracticTask2/: PracticTask2.sln  PracticTask2.vcxproj  main.cpp
PracticTask3/: PracticTask3.sln  PracticTask3.vcxproj  main.cpp
PracticalTask/: PracticalTask.cpp  PracticalTask.sln  PracticalTask.vcxproj  PracticalTask.vcxproj.filters
treciaPraktineUzduotis/: CMakeLists.txt  treciaPraktineUzduotis.cpp  treciaPraktineUzduotis.h
